Add Digital Clock

--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
         <div class="sc" id="sc"></div>
       </div>
     </div>
+    <!-- Start Digital Clock -->
+    <div class="digital-clock">
+      <!-- <span class="hour-digital"></span>
+      <span>:</span>
+      <span class="minutes-digital"></span>
+      <span>:</span>
+      <span class="seconds-digital"></span>
+      <span>:</span>
+      <span class="day-night"></span> -->
+    </div>
 
+    <!-- End Digital Clock -->
     <div class="toggle"><i class="indicator"></i></div>
     <script src="js/main.js"></script>
   </body>
